# COMAR

./: BENİOKU  README  README-tr  TranslationMap  VCTD.lyx  comar_nedir.lyx  csl_prg_manual.lyx
ahenk/: TODO  ahenk.py  (+2 more)
comar/: CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  README  SConstruct  TODO  model.xml  python-2.5.patch  valgrind.sh
comar/COMAR-UTILS/fifo2stdio/: fifo2pipe.c  fifo2stdio
comar/COMARd/: AUTHSYS.py  CHLDHELPER.py  COMARAPI.py  COMARValue.py  COMARd.py  DBWORKER.py  EXEC.py  JOBSESS.py  RPCData.py  SESSION.py  TACALL.py  comar_global.py  comarxmlrpc.dtd  ether-phy.csl  install_comar.py  msp-sample.csl  pamtest.py  rpcnewt-test.xml  testclient.py  xorg.csl
comar/COMARd/C-API/: comarvalue
comar/COMARd/DOCS/: CISCP.txt  CMDSEQ_CONN.txt  CMDS_CONN.txt  CMDS_EXEC.txt  CMDS_TAM.txt  CODEMAP.txt  COMAR-OM.txt  COMARContainer.txt  COMARRPCData.txt  CONN_STATES.sxi  CORE_NS.txt  OPLIST.txt  TTS-LIFECYCLES.sxi  container-objhook.sxw
comar/COMARd/auth/: BASE.py
comar/COMARd/capi/: api_sys.py  api_xini.py
comar/COMARd/connector/http/: RPC_HTTP.py  SocketServer.py
comar/COMARd/connector/unix/: RPC_UNIX.py
comar/COMARd/csl/: CSLDOMTree.py  CSLParser.py  CSLRunEnv.py  CSLRunEnv.py.save  CSLUtils  CSLVar.py  CSL_INTERNALS.txt  csl.py  msp-sample.csl
comar/COMARd/csl/DOCS/: API-REF.txt  CSL-README.sxw  CSL-SPEC-01-draft.sxw  WCOMAR.txt
comar/COMARd/csl/csl_mods/: csl_numeric.py  csl_string.py  csl_varops.py
comar/COMARd/csl/sample/: ether-phy.csl  xorg.conf.tmpl  xorg.csl
comar/COMARd/om_dtd/: comar.xml
comar/COMARd/om_modules/: ACL.py  CORE.py  CORE_EVENT.py  CORE_OMMGMT.py  CORE_PROF.py  CORE_REMOTE.py  XML_CSL.py
comar/bindings/: SConscript  comar.h  comar.py  hav.c  libcomar.c
comar/cmake_modules/: FindPolicyKit.cmake
comar/comar-call/: Makefile  rpc.c  xorg.csl
comar/csapi/: SConscript
comar/etc/: comar.conf  comar2.conf  model.xml  security-comments.xml  security-policy.xml  tr.org.pardus.comar.new.service  tr.org.pardus.comar.service  tr.org.pardus.comar2.service
comar/etc/policy/: comar.bootloader.policy  comar.modules.policy  comar.netfilter.policy  comar.netlink.policy  comar.netstack.policy  comar.pisi.policy  comar.policy  comar.service.policy  comar.system.package.policy  comar.system.packagehandler.policy  comar.time.policy  comar.user.policy  comar.xorg.display.policy  comar.xorg.driver.policy  tr.org.pardus.comar.boot.loader.policy  tr.org.pardus.comar.boot.modules.policy  tr.org.pardus.comar.disk.manager.policy  tr.org.pardus.comar.net.filter.policy  tr.org.pardus.comar.net.link.policy  tr.org.pardus.comar.net.share.policy  tr.org.pardus.comar.net.stack.policy  tr.org.pardus.comar.policy  tr.org.pardus.comar.system.manager.policy  tr.org.pardus.comar.system.package.policy  tr.org.pardus.comar.system.packagehandler.policy  tr.org.pardus.comar.system.service.policy  tr.org.pardus.comar.time.clock.policy  tr.org.pardus.comar.user.manager.policy  tr.org.pardus.comar.xorg.display.policy  tr.org.pardus.comar.xorg.driver.policy
comar/include/: acl.h  bus.h  cfg.h  config.h  csl.h  data.h  db.h  dbus.h  event.h  i18n.h  ipc.h  job.h  log.h  loop.h  model.h  policy.h  process.h  pydbus.h  script.h  utility.h  utils.h
comar/models/: Core.xml  Disk.Manager.xml  Kernel.Modules.xml  Network.Link.xml  System.Manager.xml  Time.Clock.xml  User.Manager.xml  Xorg.Display.xml
comar/modules/: core.py
comar/po/: ca.po  de.po  es.po  fr.po  it.po  nl.po  pl.po  pt-BR.po  pt_BR.po  tr.po
comar/policy/: tr.org.pardus.comar.boot.loader.policy  tr.org.pardus.comar.boot.modules.policy  tr.org.pardus.comar.disk.manager.policy  tr.org.pardus.comar.net.filter.policy  tr.org.pardus.comar.net.link.policy  tr.org.pardus.comar.net.share.policy  tr.org.pardus.comar.net.stack.policy  tr.org.pardus.comar.policy  tr.org.pardus.comar.system.manager.policy  tr.org.pardus.comar.system.package.policy  tr.org.pardus.comar.system.packagehandler.policy  tr.org.pardus.comar.system.service.policy  tr.org.pardus.comar.system.settings.policy  tr.org.pardus.comar.time.clock.policy  tr.org.pardus.comar.user.manager.policy  tr.org.pardus.comar.xorg.display.policy  tr.org.pardus.comar.xorg.driver.policy
comar/src/: SConscript  acl.c  bus.c  cfg.c  config.c  csl.c  data.c  db.c  dbus.c  event.c  iksemel.c  ipc.c  job.c  log.c  loop.c  main.c  model.c  notify.c  policy.c  process.c  pydbus.c  rpc_unix.c  script.c  utility.c  utils.c
comar/tools/: hav.py
om/xml/omed/: ChangeLog  NEWS  README  configure.ac
om/xml/omed/include/: Makefile.am  common.h  csl-edit.h  node-acl.h  node-desc.h  node-oper.h  node-param.h  node-prop.h  node-retval.h  om-node.h
om/xml/omed/src/: Makefile.am  csl-edit.c  export.c  iksemel.c  main.c  node-acl.c  node-desc.c  node-oper.c  node-param.c  node-prop.c  node-retval.c  om-node.c  om-tree.c  ui.c
(+283 files in other folders)
